# PPR_semestralka

./: .gitignore  CMakeLists.txt  README.md
include/: basic_math.h  calculations.h  data_loader.h  performance_stats.h  run_initializer.h  sort.h  sortings.h  utils.h
include/gpu/: kernels.h  utils.h
include/math/: basic_math.h  calc_type.h  calculations.h
include/sort/: bitonic_sort.h  sortings.h
include/utils/: data_loader.h  graph_printer.h  performance_stats.h
kernels/: mykernel.cl
output/: stats.csv  vysledek_MultiThreadNonVectorized.csv  vysledek_OnGPU.csv  vysledek_ParallelVectorized.csv  vysledek_Serial.csv  vysledek_Vectorized.csv
src/: basic_math.cpp  calc_type.cpp  calculations.cpp  data_loader.cpp  graph_printer.cpp  kernels.cpp  main.cpp  performance_stats.cpp  run_initializer.cpp  sort.cpp  sortings.cpp  utils.cpp
src/math/: basic_math.cpp  calc_type.cpp  calculations.cpp
src/sort/: bitonic_sort.cpp  sortings.cpp
src/utils/: data_loader.cpp  graph_printer.cpp  performance_stats.cpp
